--- a/index.html
+++ b/index.html
@@ -30,14 +30,47 @@
                     <li class=""><a class="scroll contact_nav" href="#Contact">Contact</a></li>
                 </ul>
             </nav>
+            <div id="nav_icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </header>
 
+        <!-- SHOWCASE -->
+        <div class="showcase_outer">
+            <div class="showcase_img"></div>
+            <div class="logo_outer">
+                <h1 class="logo">primo</h1>
+                <h2 class="logo_name">Gavin Manna</h2>
+            </div>
+            <div class="showcase_quote_box">
+                <h2 class="showcase_quote">The local, specialist, flat roofing company</h2>
+                <a href="#About" class="showcase_cta">Discover More</a>
+            </div>
+        </div>
+
+        <section class="about">
+
+        </section>
+
+
+
+
         
+        <footer class="footer">
+            <a href="" class="scroll" id="Top"><div class="uo-arrow"></div></a>
+            <div class="social_media_footer">
+                <a href="https://www.facebook.com/mannafrisby/" target="_blank"><div class="facebook_icon facebook_icon_footer"></div></a>
+            </div>
+            <h1>&#169; primo.co.uk 2018</h1>
+            <p>designed by connect@liammccolgan.com</p>
+        </footer>
 
 
 
 
 
-
+        <script type="text/javascript" src="scripts/scripts.js" async></script>
     </body>
 </html>
