--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:image" content="" />
     <title>Manna &#38; Frisby| Flat Roofing Company</title>
     <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
+    
     </head>
     <body>
         <!-- NAVIGATION -->
@@ -41,11 +41,11 @@
         <div class="showcase_outer">
             <div class="showcase_img"></div>
             <div class="logo_outer">
-                <h1 class="logo">primo</h1>
-                <h2 class="logo_name">Gavin Manna</h2>
+                <h1 class="logo_primo">primo</h1>
+                <h2 class="logo_facade">Facade</h2>
             </div>
             <div class="showcase_quote_box">
-                <h2 class="showcase_quote">The local, specialist, flat roofing company</h2>
+                <h2 class="showcase_quote">The specialist roof and building company</h2>
                 <a href="#About" class="showcase_cta">Discover More</a>
             </div>
         </div>
@@ -70,7 +70,8 @@
 
 
 
-
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="scripts/scripts.js" async></script>
     </body>
 </html>
