--- a/index.html
+++ b/index.html
@@ -50,14 +50,67 @@
             </div>
         </div>
 
+        <!-- ABOUT -->
         <section class="about">
-
+            <h1>Who are we?</h1>
+            <p class="about_quote">We are a local, specialist flat roofing company, but we also do a lot more!<br><br>
+            Whether it's building works, roof repairs, box-gutters, roof lanterns, or cladding, we pride ourselves in providing the best solutions for your needs.</p>
         </section>
 
+        <!-- SERVICES-->
+        <section class="services">
+            <h1>Services</h1>
 
+            <!-- Services Flexbox-->
+            <div class="services_flexbox">
+                <!-- Roofing-->
+                <div class="service roofing">
+                    <h2>Flat roof specialists</h2>
+                </div>
+                <!-- Drives -->
+                <div class="service drives">
+                    <h2>Resin bound paths and drives</h2>
+                </div>
+                <!-- Rendering-->
+                <div class="service rendering">
+                    <h2>Silicone rendering</h2>
+                </div>
+                <!-- Building -->
+                <div class="service building">
+                    <h2>Small building works</h2>
+                </div>
+                <!-- Cladding -->
+                <div class="service cladding">
+                    <h2>Cladding</h2>
+                </div>
+                <!-- Lanterns -->
+                <div class="service lanterns">
+                    <h2>Roof lanterns supply and fitting service</h2>
+                </div>
+            </div>
+        </section>
 
+        <!-- CONTACT-->
+        <section class="contact">
+            <h1>Contact</h1>
+            <h2>For quotes and advice on all our work, please feel free to contact us</h2>
+            <div class="contact_outer">
+                <div class="contact_box">
+                    <a href="mailto:primobuild@yahoo.com"><div class="email_icon contact_icon"></div></a>
+                    <p>primobuild@yahoo.com</p>
+                </div>
+                <div class="contact_box">
+                    <a href="tel:07947586067"><div class="tel_icon contact_icon"></div></a>
+                    <p>07947 586067</p>
+                </div>
+                <div class="contact_box">
+                    <div class="location_icon contact_icon"></div>
+                    <p>KingsCliffe, Peterborough</p>
+                </div>
+            </div>
+        </section>
 
-        
+        <!-- FOOTER -->
         <footer class="footer">
             <a href="" class="scroll" id="Top"><div class="uo-arrow"></div></a>
             <div class="social_media_footer">
@@ -69,7 +122,7 @@
 
 
 
-
+        <!-- SCRIPTS -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="scripts/scripts.js" async></script>
