27/06/18 commit: added hover states for service box

--- a/index.html
+++ b/index.html
@@ -64,28 +64,34 @@
             <!-- Services Flexbox-->
             <div class="services_flexbox">
                 <!-- Roofing-->
-                <div class="service roofing">
+                <div class="service">
                     <h2>Flat roof specialists</h2>
+                    <div class="service_bg roofing"></div>
                 </div>
                 <!-- Drives -->
-                <div class="service drives">
+                <div class="service">
                     <h2>Resin bound paths and drives</h2>
+                    <div class="service_bg drives"></div>
                 </div>
                 <!-- Rendering-->
-                <div class="service rendering">
+                <div class="service">
                     <h2>Silicone rendering</h2>
+                    <div class="service_bg rendering"></div>
                 </div>
                 <!-- Building -->
-                <div class="service building">
+                <div class="service">
                     <h2>Small building works</h2>
+                    <div class="service_bg building"></div>
                 </div>
                 <!-- Cladding -->
-                <div class="service cladding">
+                <div class="service">
                     <h2>Cladding</h2>
+                    <div class="service_bg cladding"></div>
                 </div>
                 <!-- Lanterns -->
-                <div class="service lanterns">
+                <div class="service">
                     <h2>Roof lanterns supply and fitting service</h2>
+                    <div class="service_bg lanterns"></div>
                 </div>
             </div>
         </section>
