--- a/index.html
+++ b/index.html
@@ -65,35 +65,82 @@
             <div class="services_flexbox">
                 <!-- Roofing-->
                 <div class="service">
-                    <h2>Flat roof specialists</h2>
+                    <div class="service_text">
+                        <h2>Flat roof specialists</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                    </div>
                     <div class="service_bg roofing"></div>
                 </div>
                 <!-- Drives -->
-                <div class="service">
-                    <h2>Resin bound paths and drives</h2>
+                <div class="service flex_end">
+                    <div class="service_text">
+                        <h2>Resin bound paths and drives</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                    </div>
                     <div class="service_bg drives"></div>
                 </div>
                 <!-- Rendering-->
                 <div class="service">
-                    <h2>Silicone rendering</h2>
+                    <div class="service_text">
+                        <h2>Silicone rendering</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                    </div>
                     <div class="service_bg rendering"></div>
                 </div>
                 <!-- Building -->
-                <div class="service">
-                    <h2>Small building works</h2>
+                <div class="service flex_end">
+                    <div class="service_text">
+                        <h2>Small building works</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                    </div>
                     <div class="service_bg building"></div>
                 </div>
                 <!-- Cladding -->
                 <div class="service">
-                    <h2>Cladding</h2>
+                    <div class="service_text">
+                        <h2>Cladding</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        
+                    </div>
                     <div class="service_bg cladding"></div>
                 </div>
                 <!-- Lanterns -->
-                <div class="service">
-                    <h2>Roof lanterns supply and fitting service</h2>
+                <div class="service flex_end">
+                    <div class="service_text">
+                        <h2>Roof lanterns supply and fitting service</h2>
+                        <div class="line_break"></div>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                        <li>et iusto odio dignissimos ducimus qui blanditiis</li>
+                    </div>
                     <div class="service_bg lanterns"></div>
                 </div>
             </div>
+        </section>
+
+        <section class="our_work">
+
         </section>
 
         <!-- CONTACT-->
