--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     </head>
     <body>
+        <div class="body_outer"></div>
         <!-- NAVIGATION -->
         <header class="header_outer">
             <div class="social_media_outer">
@@ -38,7 +39,7 @@
         </header>
 
         <!-- SHOWCASE -->
-        <div class="showcase_outer">
+        <div class="showcase_outer" id="Top">
             <div class="showcase_img"></div>
             <div class="logo_outer">
                 <h1 class="logo_primo">primo</h1>
@@ -46,19 +47,19 @@
             </div>
             <div class="showcase_quote_box">
                 <h2 class="showcase_quote">The specialist roof and building company</h2>
-                <a href="#About" class="showcase_cta">Discover More</a>
+                <a href="#About" class="showcase_cta scroll">Discover More</a>
             </div>
         </div>
 
         <!-- ABOUT -->
-        <section class="about">
+        <section class="about" id="About">
             <h1>Who are we?</h1>
             <p class="about_quote">We are a local, specialist flat roofing company, but we also do a lot more!<br><br>
             Whether it's building works, roof repairs, box-gutters, roof lanterns, or cladding, we pride ourselves in providing the best solutions for your needs.</p>
         </section>
 
         <!-- SERVICES-->
-        <section class="services">
+        <section class="services" id="Services">
             <h1>Services</h1>
 
             <!-- Services Flexbox-->
@@ -76,7 +77,7 @@
                     <div class="service_bg roofing"></div>
                 </div>
                 <!-- Drives -->
-                <div class="service flex_end">
+                <div class="service">
                     <div class="service_text">
                         <h2>Resin bound paths and drives</h2>
                         <div class="line_break"></div>
@@ -100,7 +101,7 @@
                     <div class="service_bg rendering"></div>
                 </div>
                 <!-- Building -->
-                <div class="service flex_end">
+                <div class="service">
                     <div class="service_text">
                         <h2>Small building works</h2>
                         <div class="line_break"></div>
@@ -125,7 +126,7 @@
                     <div class="service_bg cladding"></div>
                 </div>
                 <!-- Lanterns -->
-                <div class="service flex_end">
+                <div class="service">
                     <div class="service_text">
                         <h2>Roof lanterns supply and fitting service</h2>
                         <div class="line_break"></div>
@@ -139,12 +140,12 @@
             </div>
         </section>
 
-        <section class="our_work">
+        <section class="our_work" id="OurWork">
 
         </section>
 
         <!-- CONTACT-->
-        <section class="contact">
+        <section class="contact" id="Contact">
             <h1>Contact</h1>
             <h2>For quotes and advice on all our work, please feel free to contact us</h2>
             <div class="contact_outer">
