--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <section class="about" id="About">
             <h1>Who are we?</h1>
             <p class="about_quote">We are a local, specialist flat roofing company, but we also do a lot more!<br><br>
-            Whether it's building works, roof repairs, box-gutters, roof lanterns, or cladding, we pride ourselves in providing the best solutions for your needs.</p>
+            Whether it's building works, roof repairs, box-gutters, roof lanterns, or cladding, we pride ourselves in providing the best solutions for your needs.<br><br>
+            Due to our very high standards, we have continued satisfaction from all our customers making us a company you can trust. </p>
         </section>
 
         <!-- SERVICES-->
