--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
             <p class="about_quote">We are a local, specialist flat roofing company, but we also do a lot more!<br><br>
             Whether it's building works, roof repairs, box-gutters, roof lanterns, or cladding, we pride ourselves in providing the best solutions for your needs.<br><br>
             Due to our very high standards, we have continued satisfaction from all our customers making us a company you can trust. </p>
+
+            <div class="about_service--flexbox">
+                <div class="about_service--box"></div>
+                <div class="about_service--box"></div>
+                <div class="about_service--box"></div>
+                <div class="about_service--box"></div>
+                <div class="about_service--box"></div>
+                <div class="about_service--box"></div>
+            </div>
         </section>
 
         <!-- SERVICES-->
